--- a/src/main/webapp/view/login.html
+++ b/src/main/webapp/view/login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>心理诊断登录界面</title>
+<title>答题王登录界面</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <script language="JavaScript" src="js/jquery2.js"></script>
 <script src="js/cloud.js" type="text/javascript"></script>
@@ -14,10 +14,7 @@
   <div id="cloud1" class="cloud"></div>
   <div id="cloud2" class="cloud"></div>
 </div>
-<div class="logintop"> <span>欢迎登录心理诊断后台</span>
-  <ul>
-    <li><a href="#">返回首页</a></li>
-  </ul>
+<div class="logintop"> <span>欢迎登录答题王后台</span>
 </div>
 <div class="loginbody"> <span class="systemlogo"></span>
   <from action="${pageContext.request.contextPath }/LoginController/login" method="post">
