--- a/src/main/webapp/view/user_management_add.html
+++ b/src/main/webapp/view/user_management_add.html
@@ -22,7 +22,7 @@
                     <label for="L_email" class="layui-form-label">
                         <span class="x-red">*</span>用户名称</label>
                     <div class="layui-input-inline">
-                        <input type="text"  name="name" 
+                        <input type="text" id="name"  name="name" 
                          class="layui-input">
                     </div>
                     <div class="layui-form-mid layui-word-aux">
@@ -67,8 +67,8 @@
                 <div class="layui-form-item">
                     <label for="L_repass" class="layui-form-label">
                     </label>
-                    <button  class="layui-btn">
-                        增加
+                    <button id="add" class="layui-btn">
+                        			增加
                     </button>
                 </div>
             </form>
@@ -78,5 +78,29 @@
         <script src="./js/x-layui.js" charset="utf-8">
         </script>
     </body>
-
+<script>
+	$("#add").click(function() {
+	            $.ajax({
+	                url : "http://localhost:8080/maven_ssm/user/add",
+	                type : "POST",
+	                dataType:"json",
+	                contentType : "application/json;charset=UTF-8",
+	                <!-- 向后端传输的数据 -->
+	                data : JSON.stringify({
+	                    id : $("#name").val(),
+	                    id : $("#L_username").val(),
+	                    id : $("#username").val(),
+	                    id : $("#username").val(),
+	                }),
+	                success:function(result) {
+	                    <!-- 处理后端返回的数据 -->
+	                    var message= JSON.stringify(result);
+	                    $("#select-box").html("查询成功" + message);
+	                },
+	                error:function(result){
+	                    $("#select-box").html("查询失败");
+	                }
+	            });
+	        });
+</script>
 </html>
